--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
   background-color: #e9e9e9;
   margin-top: 2%;
 } */
+body{
+  background: url("../images/background1.jpg") no-repeat fixed center;
+}
 .row{
   margin-top:15px;
 }
@@ -46,12 +49,16 @@
   padding-top: 30px
 }
 a{
- color: #1594a8;
+  color:white !important;
 }
 a:hover{
-  text-decoration: none;
+  text-decoration: none !important;
   
 }
+.icon-background{
+ color: white;
+}
+
 .gear-icon:before {
    content: "\2605"; 
    margin-right: 6px;
