--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
   background-color: #e9e9e9;
   margin-top: 2%;
 } */
-body{
-  background: url("../images/background1.jpg") no-repeat fixed center;
+#home{
+  background: url("../images/background1.png") no-repeat fixed center;
+  background-size: 100% 100%;
 }
 .row{
   margin-top:15px;
