--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin-top: 2%;
 } */
 #home{
-  background: url("../images/background1.png") no-repeat fixed center;
+  background: url("../images/background.png") no-repeat fixed center;
   background-size: 100% 100%;
 }
 .row{
