--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin-top: 2%;
 } */
 #home{
-  background: url("../images/background-ctsa.png") no-repeat fixed center;
+  background: url("../images/background-ctsa.png") fixed no-repeat center;
   background-size: 100% 100%;
 }
 .row{
@@ -82,8 +82,21 @@ a:hover{
 }
 .hideaway{
   display: none;
-  transition: 0.3s;
+  
 }
 .forminput{
-  color: white
+  color: black;
+  padding-top:10%;
+}
+#pencil-image{
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+}
+html, body, {
+  position: fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
 }
