--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   font-family:Arial, Helvetica, sans-serif
 }
 
-#home {
+#homebody {
   background: url("../images/background-ctsa.png") fixed no-repeat center;
   background-size: 100% 100%;
 }
@@ -55,7 +55,7 @@
   padding-top: 30px
 }
 
-a {
+.menu > a{
   color: white !important;
 }
 
