--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 }
 
 #homebody {
-  background: url("../images/background-ctsa.png") fixed no-repeat center;
+  /* background: url("../images/background-ctsa.png") fixed no-repeat center; */
+  background: url("../images/orange-background.jpg") fixed no-repeat center;
   background-size: 100% 100%;
 }
 
