--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@
   margin-top: 2%;
 } */
 
-* {
-  font-family:Arial, Helvetica, sans-serif
+html {
+  font-family: 'Muli', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
 }
 
 #homebody {
