--- a/css/tab.css
+++ b/css/tab.css
@@ -205,7 +205,7 @@
     border-radius: 0px 20px 20px 20px;
     height: calc(100vh - 200px);
     top: 10px;
-    min-height: 700px; 
+    min-height: 800px; 
     /* height:100vh; */
 
   }
@@ -263,7 +263,12 @@
 
   .banner {
     background: url("../images/banner-alternative.png") no-repeat center;
-    background-size: 450px 100%;
+
+   
+    max-width:100%;
+    max-height:100%;
+    background-size: cover;
+
     
 
 
