Update UI/UX for huong noi, huong ngoai, emphasis the input border for easier viewing - MinhTHD

--- a/web-ui/css/style.css
+++ b/web-ui/css/style.css
@@ -114,3 +114,8 @@ a:hover {
   color:white !important;
   border:none !important;
 }
+input{
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 6px;
+}
