--- a/web-ui/css/style.css
+++ b/web-ui/css/style.css
@@ -2,6 +2,11 @@
   background-color: #e9e9e9;
   margin-top: 2%;
 } */
+a:focus {
+  outline:0;
+}
+
+
 
 html {
   /* font-family: 'Muli', sans-serif !important; */
@@ -115,7 +120,7 @@ a:hover {
   border:none !important;
 }
 input{
-  border: 1px solid black;
-  border-radius: 4px;
-  padding: 6px;
+  border: 1px solid black ;
+  border-radius: 4px ;
+  padding: 6px ;
 }
