--- a/web-ui/css/tab.css
+++ b/web-ui/css/tab.css
@@ -1,3 +1,7 @@
+  body{
+    /* background-color: #ff7d1f !important;  */
+    background-color: #fff691 !important;
+  }
   #triangle {
     width: 0;
     height: 0;
@@ -77,7 +81,7 @@
     /* background: url("./images/background-ctsa.png"); */
     background-position-x: 80%;
     /* background: url("./images/violet-banner.jpg"); */
-    background: url("../images/orange-banner.jpg") no-repeat;
+    background: url("../images/orange-background-banner.jpg") no-repeat;
     background-color: white;
     left: -80px;
     top: 72px;
@@ -89,7 +93,7 @@
 
   #position {
     /* background: url("./images/background-ctsa - inverse.png"); */
-    background: url("../images/orange-banner-flip.jpg") no-repeat;
+    background: url("../images/orange-background-banner-flip.jpg") no-repeat;
     /* background: url("./images/orange-background.jpg"); */
     background-position-x: 100%;
     background-color: white;
@@ -102,16 +106,17 @@
 
   }
 
+
+
   
 
   .tab {
     height: 50px;
     width: 150px;
     border-radius: 15px 15px 0px 0px;
-    background-color: #FFF;
     position: relative;
     top: 25px;
-    background-color: #075166;
+    background-color: #343a40;
 
     display: inline-block;
     z-index: 2;
@@ -121,7 +126,7 @@
     height: 50px;
     width: 70px;
     border-radius: 10px 10px 0px 0px;
-    background-color: #075166;
+    background-color: #343a40;
     content: "";
     position: absolute;
     left: 104px;
@@ -139,7 +144,7 @@
   }
 
   .tabactive {
-    background-color: whitesmoke !important;
+    background-color: rgb(235, 231, 231) !important;
     box-shadow: black 0 5px 10px 0;
     /* color: rgb(226, 220, 220) ; */
   }
@@ -155,7 +160,7 @@
     height: 50px;
     width: 70px;
     border-radius: 10px 10px 0px 0px;
-    background-color: whitesmoke;
+    background-color: rgb(235, 231, 231);
     content: "";
     position: absolute;
     left: 104px;
@@ -219,7 +224,7 @@
     height: 110px;
     width: 110px;
     /* border: 3px solid rgba(175, 174, 174, 0.781); */
-    border-radius: 50%;
+    /* border-radius: 50%; */
 
 
   }
@@ -232,7 +237,7 @@
     height: 110px;
     width: 110px;
     /* border: 3px solid rgba(175, 174, 174, 0.781); */
-    border-radius: 50%;
+    /* border-radius: 50%; */
     /* margin-top:5px; */
     /* margin-left: 20px; */
   }
@@ -242,13 +247,13 @@
   }
 
   .folder {
-    background: url("../images/world-map.png") no-repeat;
-    background-size: 95% 95%;
-    background-color: whitesmoke;
+    /* background: url("../images/world-map.png") no-repeat; */
+    /* background-size: 95% 95%; */
+    background-color: rgb(235, 231, 231);
     /* background-attachment: fixed; */
     /* background-position: center;  */
     background-position-y: 20%;
-    box-shadow: black 0 5px 10px 0;
+    /* box-shadow: black 0 5px 10px 0; */
     z-index: 20;
   }
 
@@ -267,8 +272,10 @@
    
     max-width:100%;
     max-height:100%;
-    background-size: cover;
-
+    background-size: contain;
+    width:300;
+    height:600;
+ padding-top:5%
     
 
 
