Transfer data to result page after receiving user form input from home page - MinhTHD

--- a/web-ui/css/tab.css
+++ b/web-ui/css/tab.css
@@ -1,6 +1,6 @@
   body{
-    /* background-color: #ff7d1f !important;  */
-    background-color: #fff691 !important;
+    background-color: #ff7d1f !important; 
+    /* background-color: #fff691 !important; */
   }
   #triangle {
     width: 0;
