--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -10,27 +10,31 @@
 #content-result{
     border-radius: 20px 20px 20px 20px;
     height: calc(100vh - 200px);
-    top: 10px;
+    top: 50px;
     min-height: 800px; 
 }
 section.range-slider {
     position: relative;
-    width: 200px;
-    height: 35px;
-    text-align: center;
+    width: 50%;
+    height: 50px;
+    
+    
 }
 
 section.range-slider input {
+    
     pointer-events: none;
     position: absolute;
     overflow: hidden;
     left: 0;
     top: 15px;
-    width: 200px;
+    width: 200%;
     outline: none;
-    height: 18px;
+    height: 25px;
     margin: 0;
     padding: 0;
+    border: 0;
+    opacity: 0.8;
 }
 
 section.range-slider input::-webkit-slider-thumb {
@@ -38,6 +42,12 @@ section.range-slider input::-webkit-slider-thumb {
     position: relative;
     z-index: 1;
     outline: 0;
+    width: 20px;
+    height: 20px;
+    background:#f32b07;
+    cursor: pointer;
+    border-radius: 50%; 
+    
 }
 
 section.range-slider input::-moz-range-thumb {
@@ -45,13 +55,17 @@ section.range-slider input::-moz-range-thumb {
     position: relative;
     z-index: 10;
     -moz-appearance: none;
-    width: 9px;
+    width: 20px;
+    height: 20px;
+    background:#f32b07;
+    cursor: pointer;
+    border-radius: 50%; 
 }
 
 section.range-slider input::-moz-range-track {
     position: relative;
     z-index: -1;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: grey;
     border: 0;
 }
 section.range-slider input:last-of-type::-moz-range-track {
@@ -61,6 +75,12 @@ section.range-slider input:last-of-type::-moz-range-track {
 }
   section.range-slider input[type=range]::-moz-focus-outer {
   border: 0;
+}
+.modal-body > div > input {
+    width:70px;
+}
+.rangeValues{
+    margin-bottom: 30px;
 }
 
 
