--- a/web-ui/css/tab.css
+++ b/web-ui/css/tab.css
@@ -273,9 +273,9 @@
     max-width:100%;
     max-height:100%;
     background-size: contain;
-    width:300;
-    height:600;
- padding-top:5%
+    width:350px;
+    height:600px;
+ padding-top:1%
     
 
 
