Update UI for result page - MinhTHD

--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -15,7 +15,7 @@ body{
     background-size: contain;
     height:590px;
     width:280px; 
-    padding-top:5%;
+    padding-top:23px;
     cursor:pointer;
 }
 #content-result{
