--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -132,3 +132,7 @@ section.range-slider input:last-of-type::-moz-range-track {
     margin-top: -28px;
 
   } 
+  .job-result{
+    padding-left:20%;
+    padding-right:20%;
+  }
