Minor update to result page - MinhTHD

--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -135,4 +135,5 @@ section.range-slider input:last-of-type::-moz-range-track {
   .job-result{
     padding-left:20%;
     padding-right:20%;
+    height:120px;
   }
