--- a/web-ui/css/tab.css
+++ b/web-ui/css/tab.css
@@ -274,6 +274,7 @@ body{
   max-width:100%;
   max-height:100%;
   background-size: contain;
+  /* background-position-x: 48%; */
   width:350px;
   height:600px;
 padding-top:1%
