--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -8,7 +8,7 @@ body{
       .container-fluid {
         width: 80vw !important;
       }
-#result1{
+.result{
     background: url("../images/banner-alternative.png")no-repeat center;
     max-width:100%;
     max-height:100%;
@@ -18,7 +18,12 @@ body{
     padding-top:23px;
     cursor:pointer;
 }
-#result2{
+.result>div>img{
+    height:180px;
+    width:180px;
+
+}
+.result-smaller{
     background: url("../images/banner-alternative.png")no-repeat center;
     max-width:100%;
     max-height:100%;
@@ -28,16 +33,12 @@ body{
     padding-top:18px;
     cursor:pointer;
 }
-#result3{
-    background: url("../images/banner-alternative.png")no-repeat center;
-    max-width:100%;
-    max-height:100%;
-    background-size: contain;
-    height:480px;
-    width:228px; 
-    padding-top:13px;
-    cursor:pointer;
+.result-smaller>div>img{
+    height:150px;
+    width:150px;
+
 }
+
 #content-result{
     border-radius: 20px 20px 20px 20px;
     height: calc(100vh - 200px);
