--- a/web-ui/css/result.css
+++ b/web-ui/css/result.css
@@ -123,7 +123,7 @@ section.range-slider input:last-of-type::-moz-range-track {
     background: url("../images/orange-background-banner.jpg") no-repeat;
     background-size: 100% 80%;
     /* margin-top: -70px; */
-    /* background-size: 100% 100%; */
+   
 
 }
 #triangle {
@@ -167,3 +167,37 @@ section.range-slider input:last-of-type::-moz-range-track {
     border-bottom: 1px solid rgb(209, 209, 209);
 }
 
+.text-conclusion{
+    background: url("../images/result-conclusion.png")no-repeat center;
+    
+    background-size:  100% 100%;
+    color: rgb(238, 237, 237);
+    margin-left:-63px !important;
+    margin-right: -63px !important;
+    margin-top: 100px !important;
+    padding-left: 10%;
+    padding-right:10%;
+
+}
+.lastest-result-text{
+    background: url("../images/result-text.png")no-repeat center;
+    background-size:  100% 100%;
+    width:250px;
+    margin-left:20%;
+   
+    text-align: center;
+    margin-top:-5%;
+    margin-bottom:8%;
+    color:rgb(240, 240, 240)
+}
+.predict-result-text{
+    /* background: url("../images/predict-text.png")no-repeat center; */
+    background: url("../images/result-text.png")no-repeat center;
+    background-size:  100% 100%;
+    width:250px;
+    margin-left:-80px;
+    text-align: center;
+    margin-top:-5%;
+    margin-bottom:8%;
+    color:rgb(240, 240, 240)
+}
