--- a/web-ui/css/tab.css
+++ b/web-ui/css/tab.css
@@ -15,7 +15,7 @@ body {
   border-right-color: #be1600;
   /* border-right-color: #e27e21; */
   margin-left: -79px;
-  margin-top: 72px;
+  margin-top: 20px;
 }
 
 .right-triangle {
@@ -28,7 +28,6 @@ body {
   border-left-color: #be1600;
   border-right-color: transparent;
   margin-left: 1520px;
-  margin-top: 32px;
 }
 
 .top-left {
@@ -38,7 +37,7 @@ body {
   background: url("../images/orange-background-banner.jpg") no-repeat;
   background-color: white;
   left: -80px;
-  top: 72px;
+  top: 20px;
   border-radius: 0px 90px 90px 0px;
   /* box-shadow: grey 0 5px 5px 1px; */
 }
@@ -50,7 +49,7 @@ body {
   background-position-x: 100%;
   background-color: white;
   left: 453px;
-  top: 32px;
+  /* top: 50px; */
   border-radius: 90px 0px 0px 90px;
   /* box-shadow: grey 0 5px 5px 1px; */
   text-align: right;
