--- a/web-ui/css/job-recruit-alternative.css
+++ b/web-ui/css/job-recruit-alternative.css
@@ -2,7 +2,11 @@ body {
     background-color: #ff7d1f !important;
     /* background-color: #fff691 !important; */
 }
-
+.top-background{
+     background: url("../images/world-map.png") no-repeat;
+      background-size: 100% 100%;
+      
+}
 .container-fluid {
     width: 80vw !important;
 }
@@ -27,10 +31,31 @@ body {
     height: 80%;
     
 }
-.job-detail {
+.job-detail1 {
     background-color: white;
     margin-top: 15px;
     margin-bottom: 15px;
-    border-radius:10px;
+    border-top-left-radius:10px;
+    border-bottom-left-radius:10px;
     padding:2%;
+    
+  }
+  .job-detail2 {
+    background-color: white;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    /* border-radius:10px; */
+    border-left: 1px solid rgb(182, 182, 182);
+    border-right: 1px solid rgb(182, 182, 182);
+    padding:2%;
+    
+  }
+  .job-detail3 {
+    background-color: white;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-top-right-radius:10px;
+    border-bottom-right-radius:10px;
+    padding:2%;
+    
   }
