--- a/web-ui/css/job-recruit-alternative.css
+++ b/web-ui/css/job-recruit-alternative.css
@@ -34,7 +34,7 @@ body {
 .job-detail1 {
     background-color: white;
     margin-top: 15px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     border-top-left-radius:10px;
     border-bottom-left-radius:10px;
     padding:2%;
@@ -43,7 +43,7 @@ body {
   .job-detail2 {
     background-color: white;
     margin-top: 15px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     /* border-radius:10px; */
     border-left: 1px solid rgb(182, 182, 182);
     border-right: 1px solid rgb(182, 182, 182);
@@ -53,7 +53,7 @@ body {
   .job-detail3 {
     background-color: white;
     margin-top: 15px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
     padding:2%;
