Create 2 success and error Dialog, Create empty folder with 2 tab page - MinhTHD

--- a/web-ui/web-v0.7.1/css/style.css
+++ b/web-ui/web-v0.7.1/css/style.css
@@ -182,3 +182,9 @@ input{
   height: 100%;
   width: 100%;
 }
+/* .gif-check{
+  background: url('https://res.cloudinary.com/ctsa-capstone/image/upload/v1541559774/demo-image/button-tick.gif') no-repeat center center;
+   position: absolute;
+  height: 150px;
+  width: 250px;
+} */
