--- a/web-ui/web-v0.7.1/css/style.css
+++ b/web-ui/web-v0.7.1/css/style.css
@@ -2,11 +2,10 @@
   background-color: #e9e9e9;
   margin-top: 2%;
 } */
+
 /* a:focus {
   outline:0;
 } */
-
-
 
 html {
   /* font-family: 'Muli', sans-serif !important; */
@@ -19,8 +18,26 @@ html {
   background-size: 100% 100%;
 }
 
+.img-logo {
+  margin-top: 10%;
+  margin-left: -20px
+}
+
 .row {
   margin-top: 15px;
+}
+.form-question{
+  cursor: pointer;
+}
+.trait {
+  color: rgb(39, 39, 39);
+  font-size: 20px;
+}
+
+.trait:hover {
+  color: rgb(39, 39, 39);
+  font-size: 22px;
+  transition: 0.3s;
 }
 
 /* .listjob {
@@ -57,7 +74,7 @@ html {
   padding-top: 30px
 }
 
-.menu > a{
+.menu>a {
   color: white !important;
 }
 
@@ -95,7 +112,7 @@ a:hover {
 }
 
 .hideaway {
-  display: none ;
+  display: none;
 }
 
 .forminput {
@@ -109,23 +126,28 @@ a:hover {
   width: auto\9;
   /* ie8 */
 }
-.selected{
+
+.selected {
   background-color: #ff6215 !important;
-  color:rgb(240, 240, 240) !important;
-  border:none !important;
+  color: rgb(240, 240, 240) !important;
+  border: none !important;
   padding: .375rem .75rem !important;
-  }
-input{
-  border: 1px solid black ;
-  border-radius: 4px ;
-  padding: 6px ;
 }
-.bg-orange{
-  background-color: #FF7D1F ;
+
+input {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 6px;
 }
-.text-white{
+
+.bg-orange {
+  background-color: #FF7D1F;
+}
+
+.text-white {
   color: rgb(240, 240, 240);
 }
+
 #loader {
   transition: all .3s ease-in-out;
   opacity: 1;
@@ -142,29 +164,28 @@ input{
   visibility: hidden
 }
 
-
-
 @-webkit-keyframes sk-scaleout {
   0% {
-      -webkit-transform: scale(0)
+    -webkit-transform: scale(0)
   }
   100% {
-      -webkit-transform: scale(1);
-      opacity: 0
+    -webkit-transform: scale(1);
+    opacity: 0
   }
 }
 
 @keyframes sk-scaleout {
   0% {
-      -webkit-transform: scale(0);
-      transform: scale(0)
+    -webkit-transform: scale(0);
+    transform: scale(0)
   }
   100% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      opacity: 0
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0
   }
 }
+
 /* .spinner {
   width: 40px;
   height: 40px;
@@ -176,18 +197,21 @@ input{
   -webkit-animation: sk-scaleout 1s infinite ease-in-out;
   animation: sk-scaleout 1s infinite ease-in-out
 } */
+
 .spinner {
   background: url('https://res.cloudinary.com/ctsa-capstone/image/upload/v1541343719/demo-image/loader.gif') no-repeat center center;
   position: absolute;
   height: 100%;
   width: 100%;
 }
+
 /* .gif-check{
   background: url('https://res.cloudinary.com/ctsa-capstone/image/upload/v1541559774/demo-image/button-tick.gif') no-repeat center center;
    position: absolute;
   height: 150px;
   width: 250px;
 } */
+
 .switch {
   position: relative;
   display: inline-block;
@@ -195,7 +219,7 @@ input{
   height: 34px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -225,21 +249,22 @@ input{
   transition: .4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
 /* Rounded sliders */
+
 .slider.round {
   border-radius: 34px;
 }
