--- a/web-admin-custom/ctsa-custom/ctsa.css
+++ b/web-admin-custom/ctsa-custom/ctsa.css
@@ -9,3 +9,6 @@ input{
 .table-bordered th, .table-bordered td{
     border: 1px solid rgba(85, 85, 85, 0.555) !important;
 }
+#alert{
+    color:red;
+}
